test/bad/generics/type01.px

func f<Num T>(T x) Int def
    return x
